# simplemqtt

./: .gitignore  README.md  sandbox.py  set_package_name.py  setup.cfg
mosquitto/: Dockerfile  README.md  docker-compose.yml  mosquitto.conf  rebuild_image.sh
mosquitto/config/: mosquitto.conf
mosquitto/scripts/: create_client_key_certificate_and_chain.sh  create_server_key_and_certificate.sh  create_signing_CA.sh  rebuild_image.sh
src/iotpubsub/: __init__.py  mqtt.py
src/simplemqtt/: mqtt.py  utils.py
